## Change history

[2019/06/08]
* If the contents of a Matrix3 is modified and the IsIdentity property is called, the matrix will be check to see if it is actually the identity, not only for matrices that were initialized as the identity.
* Added Matrix2 struct.
* Added Matrix4 struct.
* Added Vector4 struct.
* Added TransformBy method that takes a Matrix4 as argument to the EntityObject class.
* Deleted the Matrix3 constructor that takes an array as argument. It was actually using the row major convention while the transformation matrices are written as column major.
* Improved the way the Ellipse method PolygonalVertexes generates the points in an ellipse arc.

[2019/06/04]
* When exploding an Insert with non-uniform scaling that contains LwPolylines with rounded vertexes they will be decomposed in lines and ellipse arcs.
* Some adjustments to the ellipse transform code to handle the start and end angles correctly.
* Deleted the layout Viewport. This is the viewport with id 1 that represents the view to the paper space, it is more related to the UI, it has no graphical representation, and it will not be loaded.

[2019/05/27]
* Improved the ellipse TransformBy method, now it should work under all circumstances.

[2019/05/21]
* Modify the TextStyle class to use a font file or a font family name plus its font style, but not both.
* Deleted the property IsTrueType from the TextStyle class.
* The TextStyle method TrueTypeFontFamilyName is now public static in case it is needed, the constructor does not use it anymore.
* (fixed) When reading a TextStyle if both the font file and the font extended data information the font style was not applied.

[2019/05/08]
* Deleted a few unnecessary checks when adding an entity to a block, this will improve the process of adding entities to a document and reading a DXF file.
* Updated the StringEnum class to use generics.